--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,10 @@
     <string name="all">All</string>
     <string name="recent">Recent</string>
     <string name="chart_header">Visual Chart</string>
+
+    <string name="bank_name">Bank Name</string>
+    <string name="estimated_balance">Estimated Balance :</string>
+    <string name="last_text">Last Text :</string>
     <string-array name="dropdown_items">
         <item>All</item>
         <item>CBE</item>
